--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -30,7 +30,32 @@
     <addaction name="sortbtn"/>
     <addaction name="graphbtn"/>
    </widget>
+   <widget class="QMenu" name="menu_2">
+    <property name="title">
+     <string>文件</string>
+    </property>
+    <addaction name="openbtn"/>
+    <addaction name="savebtn"/>
+    <addaction name="saveotherbtn"/>
+   </widget>
+   <widget class="QMenu" name="menu_3">
+    <property name="title">
+     <string>编辑</string>
+    </property>
+    <addaction name="resetbtn"/>
+    <addaction name="randombtn"/>
+   </widget>
+   <widget class="QMenu" name="menu_4">
+    <property name="title">
+     <string>帮助</string>
+    </property>
+    <addaction name="actionMade_by_Meiosis"/>
+    <addaction name="action"/>
+   </widget>
+   <addaction name="menu_2"/>
+   <addaction name="menu_3"/>
    <addaction name="menu"/>
+   <addaction name="menu_4"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="sortbtn">
@@ -41,6 +66,41 @@
   <action name="graphbtn">
    <property name="text">
     <string>图模式</string>
+   </property>
+  </action>
+  <action name="openbtn">
+   <property name="text">
+    <string>打开</string>
+   </property>
+  </action>
+  <action name="savebtn">
+   <property name="text">
+    <string>保存</string>
+   </property>
+  </action>
+  <action name="saveotherbtn">
+   <property name="text">
+    <string>另存为</string>
+   </property>
+  </action>
+  <action name="resetbtn">
+   <property name="text">
+    <string>重置</string>
+   </property>
+  </action>
+  <action name="randombtn">
+   <property name="text">
+    <string>随机打乱</string>
+   </property>
+  </action>
+  <action name="actionMade_by_Meiosis">
+   <property name="text">
+    <string>Made by Meiosis</string>
+   </property>
+  </action>
+  <action name="action">
+   <property name="text">
+    <string>用于数据结构课设</string>
    </property>
   </action>
  </widget>
