--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -49,13 +49,22 @@
     <property name="title">
      <string>帮助</string>
     </property>
+    <addaction name="helpAction"/>
     <addaction name="actionMade_by_Meiosis"/>
     <addaction name="action"/>
+   </widget>
+   <widget class="QMenu" name="menu_5">
+    <property name="title">
+     <string>扩展选项</string>
+    </property>
+    <addaction name="DSLAction"/>
+    <addaction name="actionAI"/>
    </widget>
    <addaction name="menu_2"/>
    <addaction name="menu_3"/>
    <addaction name="menu"/>
    <addaction name="menu_4"/>
+   <addaction name="menu_5"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="sortbtn">
@@ -101,6 +110,21 @@
   <action name="action">
    <property name="text">
     <string>用于数据结构课设</string>
+   </property>
+  </action>
+  <action name="DSLAction">
+   <property name="text">
+    <string>代码模式</string>
+   </property>
+  </action>
+  <action name="actionAI">
+   <property name="text">
+    <string>AI模式</string>
+   </property>
+  </action>
+  <action name="helpAction">
+   <property name="text">
+    <string>帮助手册</string>
    </property>
   </action>
  </widget>
